--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 sourceCompatibility = 11
 
 repositories {
-    jcenter()
+    mavenCentral();
 }
 
 dependencies {
@@ -25,7 +25,7 @@ task run(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
-def getClassName(day) {
+static def getClassName(day) {
     if (!day) {
         return null
     }
