--- a/build.gradle
+++ b/build.gradle
@@ -2,33 +2,24 @@ plugins {
     id 'java'
 }
 
-sourceCompatibility = 11
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 repositories {
-    mavenCentral();
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'com.google.guava:guava:30.1-jre'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.google.guava:guava:33.3.1-jre'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
+    testImplementation platform('org.junit:junit-bom:5.11.3')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
-
-task run(type: JavaExec) {
-    mainClass = getClassName(project.findProperty('day'))
-    classpath = sourceSets.main.runtimeClasspath
-}
-
-static def getClassName(day) {
-    if (!day) {
-        return null
-    }
-    'pkovacs.aoc.y2020.Day' + (day.length() == 1 ? "0${day}" : day)
-}
-
